--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
             <nav>
               <ul class="header__menu">
                 <li>
-                  <a href="./index.html" class="link carrent-link">Home</a>
+                  <a href="index.html" class="link carrent-link">Home</a>
                 </li>
                 <li>
                   <a href="./resume.html" class="link">Resume</a>
                 </li>
                 <li>
-                  <a href="./index.html#service" class="link">Services</a>
+                  <a href="index.html#service" class="link">Services</a>
                 </li>
                 <li>
-                  <a href="./index.html#portfolio" class="link">Portfolio</a>
+                  <a href="index.html#portfolio" class="link">Portfolio</a>
                 </li>
-                <li><a href="./index.html#contact" class="link">Contact</a></li>
+                <li><a href="index.html#contact" class="link">Contact</a></li>
               </ul>
             </nav>
             <button class="header__burger menu-btn-open" type="button">
