--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             <nav>
               <ul class="header__menu">
                 <li><a href="index.html" class="link">Home</a></li>
-                <li><a href="#" class="link carrent-link">Resume</a></li>
+                <li><a href="#" class="link carrent-link">About</a></li>
                 <li><a href="index.html#services" class="link">Services</a></li>
                 <li>
                   <a href="./index.html#portfolio" class="link">Portfolio</a>
