--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <a href="index.html" class="link carrent-link">Home</a>
                 </li>
                 <li>
-                  <a href="./resume.html" class="link">Resume</a>
+                  <a href="./about.html" class="link">About</a>
                 </li>
                 <li>
                   <a href="index.html#service" class="link">Services</a>
@@ -179,7 +179,11 @@
           <div class="container mb-5">
             <div class="row">
               <div class="col d-none d-md-block">
-                <img src="./images/ttt-project.jpg" alt="" class="img-fluid" />
+                <img
+                  src="./images/ttt-project.jpg"
+                  alt="Tic-tac-toe project"
+                  class="img-fluid"
+                />
               </div>
               <div
                 class="portfolio-section__project-description col text-center text-md-start pe-5"
