--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
                   <a href="index.html#service" class="link">Services</a>
                 </li>
                 <li>
-                  <a href="index.html#portfolio" class="link carrent-link"
+                  <a href="./portfolio.html" class="link carrent-link"
                     >Portfolio</a
                   >
                 </li>
